--- a/lib/l10n/intl_sw.arb
+++ b/lib/l10n/intl_sw.arb
@@ -159,5 +159,15 @@
   "@circle_word": {
     "type": "text",
     "placeholders": {}
-  }
+  },
+    "family": "Familia",
+    "@family": {
+      "type": "text",
+      "placeholders": {}
+    },
+    "friends": "Marafiki",
+    "@friends": {
+      "type": "text",
+      "placeholders": {}
+    }
 }
