--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -734,5 +734,20 @@
   "@vs": {
     "type": "text",
     "placeholders": {}
-  }
+  },
+     "tapACamera": "Tap a camera",
+     "@tapACamera": {
+       "type": "text",
+       "placeholders": {}
+     },
+     "enterYourDetails": "Enter your details",
+     "@enterYourDetails": {
+       "type": "text",
+       "placeholders": {}
+     },
+     "writeYourName": "Write your name...",
+     "@writeYourName": {
+       "type": "text",
+       "placeholders": {}
+     }
 }
